# distiller-services

./: .djlintrc  .eslintrc.json  .gitignore  .htmlhintrc  .markdownlint.json  .prettierignore  .prettierrc.json  .stylelintrc.json  .yamllint.yaml  CLAUDE.md  DEBIAN_PACKAGING.md  Justfile  Makefile  README.md  build-deb.sh  dev.sh  distiller-wifi.service  distiller_wifi.py  distiller_wifi_service.py  eink_display_flush.py  generate_eink_previews.py  install-service.sh  install-tunnel-service.sh  install.sh  lint.sh  mdns_service.py  package-lock.json  package.json  pinggy-tunnel.service  pinggy_tunnel_service.py  pyproject.toml  requirements.txt  start-wifi-service.sh  tunnel_config.json  wifi-setup.service  wifi_info_display.py  wifi_setup_service.py
.github/: dependabot.yml
.github/workflows/: release.yml  update-dependencies.yml
api/: __init__.py
core/: __init__.py  avahi_service.py  captive_portal.py  config.py  device_config.py  dns_config.py  mdns_service.py  network_manager.py  state.py
debian/: changelog  control  copyright  dirs  distiller-services.install  distiller-services.logrotate  distiller-wifi  distiller-wifi.1  distiller-wifi.service  install  postinst  postrm  preinst  prerm  rules
display/: __init__.py  eink_display.py
fonts/: README.md
network/: __init__.py  device_config.py  network_utils.py  session_manager.py  wifi_manager.py  wifi_server.py
scripts/: update-hostname.sh
services/: display_layouts.py  display_screens.py  display_service.py  display_theme.py  tunnel_service.py  web_server.py
src/distiller_services/: __init__.py  __main__.py  paths.py
src/distiller_services/core/: avahi_service.py  captive_portal.py  config.py  device_config.py  network_manager.py  state.py
src/distiller_services/services/: __init__.py  display_layouts.py  display_screens.py  display_service.py  display_theme.py  tunnel_service.py  web_server.py
static/css/: common.css  confirm.css  connecting.css  index.css  monochrome.css  status.css  style.css
static/js/: app.js  common.js  wifi-setup.js
templates/: base.html  captive_portal.html  confirm.html  connecting.html  error.html  index.html  mdns_home.html  mdns_wifi_status.html  setup.html  status.html  success.html  wifi_status.html
